Fix Media and Text block bottom spacing
Updated readme.md, changelog.md and styles.css

--- a/assets/scss/partials/blocks-core.scss
+++ b/assets/scss/partials/blocks-core.scss
@@ -424,9 +424,9 @@ img {
         &.wp-block-media-text.alignfull {
             padding: 0;
             margin-top: 0;
-            margin-bottom: 0;
+            margin-bottom: $block-margin;
 
-            @include media('<600px') {
+            @include media('>=600px') {
                 margin-bottom: $margin_4x;
 
                 .wp-block-media-text__content {
