--- a/inc/gutenberg/style-editor.css
+++ b/inc/gutenberg/style-editor.css
@@ -877,9 +877,9 @@ img.aligncenter {
 .content-width .block-area *.wp-block-media-text.alignfull {
   padding: 0;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 20px;
 }
-@media (max-width: 599px) {
+@media (min-width: 600px) {
   .full-width-content .entry-content *.wp-block-media-text.alignwide, .full-width-content .entry-content *.wp-block-media-text.alignfull, .content-width .entry-content *.wp-block-media-text.alignwide, .content-width .entry-content *.wp-block-media-text.alignfull,
 .full-width-content .block-area *.wp-block-media-text.alignwide,
 .full-width-content .block-area *.wp-block-media-text.alignfull,
